--- a/Droid/Resources/layout/Main.axml
+++ b/Droid/Resources/layout/Main.axml
@@ -31,5 +31,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:id="@+id/btnAngles" />
+        <Button
+            android:text="Exit"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/btnExit" />
     </LinearLayout>
 </LinearLayout>
