* DrawView.cs: Fixed multiple timers Added + - button for size
* MainActivity.cs:
* Main.axml:
* Resource.designer.cs:

--- a/Droid/Resources/layout/Main.axml
+++ b/Droid/Resources/layout/Main.axml
@@ -32,6 +32,16 @@
             android:layout_height="match_parent"
             android:id="@+id/btnAngles" />
         <Button
+            android:text="+"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/btnUp" />
+        <Button
+            android:text="-"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:id="@+id/btnDown" />
+        <Button
             android:text="Exit"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
